<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Retail</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Retail</string>
    <string name="large_text">Large Text</string>
    <string name="largetext2">LargeText2</string>
    <string name="checkbox">CheckBox</string>
    <string name="code_barcode">Code/BarCode</string>
    <string name="qty">Quantity</string>
    <string name="description">Description</string>
    <string name="descriptionBOLDUL"><u><b>Description</b></u></string>
    <string name="price">Price</string>
    <string name="Order">Order</string>
    <string name="History">History</string>
    <string name="Exit">Exit</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="SendOrder">Send Order</string>
    <string name="customer">Customer</string>
    <string name="documennt_status">Document Status</string>
    <string name="total">Total</string>
    <string name="total_discount">Total Discount</string>
    <string name="final_amount">Final Amount</string>
    <string name="total_after_discount">Total After Discount</string>
    <string name="total_vat_amount">VAT</string>
    <string name="serverurl">Server URL</string>
    <string name="savesettings">Save Settings</string>
    <string name="revertsettings">Revert Settings</string>
    <string name="settings">Settings</string>
    <string name="MainMenu">Main Menu</string>
    <string name="SelectCustomer">Select Customer</string>
    <string name="OrderForm">Order form</string>
    <string name="OrderTotals">Order Totals</string>
    <string name="showitems">Show Items</string>
    <string name="ItemCategories">Item Categories</string>
    <string name="newitemsfrom">New Items From</string>
    <string name="ordernewitems">Order New Items</string>
    <string name="update">Update</string>
    <string name="uploadAll">Upload All</string>
    <string name="code">Code</string>
    <string name="barcode">Barcode</string>
    <string name="unitPrice">Unit Price</string>
    <string name="grossTotal">Gross Total</string>
    <string name="scan">Scan</string>
    <string name="day">Today</string>
    <string name="month">Last Month</string>
    <string name="week">Last Week</string>
    <string name="specify">Specify</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="orderSentSuccessfully">The order has been sent successfully.</string>
    <string name="orderSendSuccesfullyButLocalNotDel">The order has been sent successfully. However, the local copy may have not been deleted.</string>
    <string name="orderSendFail">The order could not be sent.</string>
    <string name="itemNotFound">Item not found</string>
    <string name="invalidLogin">Wrong username or password</string>
    <string name="invalidQty">Invalid Quantity</string>
    <string name="changeQuantity">Change Quantity</string>
    <string name="syncWaitMessage">Synchronizing Data &#8230;</string>
    <string name="noConnectionMessage">There is no connection to the remote server.</string>
    <string name="warning3G">Your network connection is provided by the mobile telephone carrier. This action may transfer huge amount of data (Estimation var1). Are you sure?.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chooseQty">Choose Quantity</string>
    <string name="bcScannerMessage">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="bcScannerMessageTitle">Install Barcode Scanner?</string>
    <string name="cancel">Cancel</string>
    <string name="uploadAllOrdersReportNoErrors">var1 Order(s) send succefully.</string>
    <string name="uploadAllOrdersReportWithErrors">var1 Order(s) send succefully. var2 Order(s) failed.</string>
    <string name="noOrders">There are no orders to send.</string>
    <string name="exportSuccessMessage">Export completed successfully.</string>
    <string name="exportFailMessage">Export Failed. Check your external storage. Also if your device is connected to a pc via usb please disconnect it.</string>
    <string name="importSuccessMessage">Import completed succefully. Please restart the application.</string>
    <string name="importFailMessage">Import failed. Make sure the file exists. Also, you may have to root your device to be able to copy to internal storage.</string>
    <string name="exportDBtoSD">Export Database To SD</string>
    <string name="importDBfromSD">Import Database From SD</string>
    <string name="path">Path:</string>
    <string name="importing">Importing Database &#8230;</string>
    <string name="exporting">Exporting Database &#8230;</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_items_by_name">ItemsByNameActivity</string>
    <string name="search">Search</string>
    <string name="itemSearch">Item Search By Name</string>
    <string name="itemSearchFailMessage">Type a minimum of 3 characters.</string>
    <string name="ordersFoundMessage">Found var1 orders. Send all?</string>
    <string name="btnShowNewItems">Show New Items</string>
    <string name="limitedItemsFromCategory">Results has been limited to var1. Please specify a more detailed category to avoid this message.</string><string name="limitedItemsFromNewItems">Results has been limited to var1. Please specify a more recent date to avoid this message.</string>
    <string name="itemInfo">Item Info</string>
    <string name="topItems">(Top var1 items)</string>
    <string name="allCategories">All</string>
    <string name="developer">ITS S.A.</string>
    <string name="developerSubtitle">Informatics &amp; Telecommunication Services</string>
    <string name="support">Technical Support</string>
    <string name="supportInfo">Phone Center: 2310 486304, E-mail: swsupport@itservices.gr</string>
    <string name="about">About</string><string name="aboutHeader">ABOUT</string><string name="offers">Offers</string>
    <string name="unableToOrderItemInactive">You cannot add this item. It is inactive.</string>
    <string name="invalidOrderMessage">Invalid Order detected</string>
    <string name="itemCode">Item Code</string>
    <string name="itemIsInactive">Item is no longer active</string>
    <string name="noPrice">Customer can no longer order this item</string>
    <string name="problem">Problem</string>
    <string name="itemHasNoDefaultBarcode">You cannot add this item. Item has no default barcode.</string>
    <string name="unableToOrderItemNoPCD">You cannot add this item. The selected customer cannot order it.</string>
    <string name="mustSynchronize">You must Update your local database.</string>
    <string name="pleaseWait">Please Wait &#8230;</string>
    <string name="items">Items</string>
    <string name="updateCompletedSuccessfully">Update completed successfully.</string>
    <string name="noNewItemsFound">No new items found since: var1.</string>
    <string name="orderIsEmpty">Order is empty.</string>
    <string name="orderQty">Qty</string>
    <string name="taxCode">Tax Code</string>
    <string name="companyName">Company Name</string>
    <string name="ok">OK</string>
    <string name="bluetoothScanner">Bluetooth Scanner</string>
    <string name="zeroQtysMessage">There are zero quantities in your order.</string>
    <string name="zeroQtysMultipleOrdersMessage">There is one or more orders that have zero quantities</string>
    <string name="batch">Batch</string>
    <string name="RestoreDeliveryAddress">Default Delivery Address</string>
    <string name="settingsHeader">SETTINGS</string>
    <string name="maxOrderQty">Max Order Quantity</string>
    <string name="measurementUnit">Measurement Unit</string>
    <string name="totalDiscount">Discount</string>
    <string name="packingQty">Packing Quantity</string>
    <string name="unavailable">is unavailable at the moment</string>
    <string name="Filter">Filter by Name or Code</string>
    <string name="noItemsFound">No Items Found</string>
    <string name="extradiscount">Extra Discount</string>
    <string name="invalidvalue">Invalid value</string>
    <string name="discount">Discount</string>
    <string name="txtFinalizeDate">Finalize Date</string>
    <string name="txtPriceCatalog">Price Catalog</string>
    <string name="txtInfoVatCategory">VAT %</string>
    <string name="AllowMultipleLines">Allow Multiple</string>
    <string name="store">Store</string>
    <string name="DefaultAddress">Default Address</string>
    <string name="Phone">Phone</string>
    <string name="Add">Add</string>
	<string name="AddNewCustomer">Add New Customer</string>
	<string name="LeaveCodeEmptyForAutogenerated">Leave Code Empty in order to autogenerate a new one</string>
	<string name="TaxCodeRequired">TaxCode is mandatory</string>
	<string name="CustomerCodeNotExist">The specified Customer Code does not exist</string>
	<string name="InvalidUser">Authentication error</string>
	<string name="NetworkError">A network error occurred. Please try again later.</string>
	<string name="PriceCatalogProblem">The Price catalog you selected is not linked with that Store</string>
	<string name="AccessProblem">You are not authorized to perform this action.</string>
	<string name="TaxCodeNotFound">The specified Tax Code cannot be automagically assigned to a new customer.</string>
	<string name="TaxCodeCreated">The new customer has been created to the system. Please update the local data in order to receive the relative records.</string>
	<string name="CustomerExists">A customer with the specified TaxCode already exists in the system. Please update the local data in order to receive the relative records.</string>		
	<string name="InitiatingUpdate">Press OK to start update.</string>		
	<string name="showHeader">Information</string><string name="defaultDocumentStatus">Default Document Status</string>
	<string name="Image">Image</string>
	<string name="exit_confirmation">Exit the application?</string>
	<string name="defaultPriceCatalog">Default Price Catalog</string>
	<string name="defaultStore">Default Store</string>
	<string name="defaultAllowMultiLines">Default Allow Multiple Lines</string>
	<string name="xslPath">XSL Path</string>
	<string name="FromFilter">From:</string>
	<string name="ToFilter">To:</string>
	<string name="StatusFilter">Status:</string>
	<string name="TypeFilter">Type:</string>
	<string name="HasBeenCheckedFilter">Has Been Checked:</string>
	<string name="HasBeenExecutedFilter">Has Been Executed:</string>
	<string name="deleteConfirmation">Delete var1 ?</string>
	<string name="exitOrderConfirmation">Exit from the order?</string>
	<string name="sendOrderConfirmation">Send Order ?</string>
	<string name="shouldUpdateConfirmation">You should update the application. Do it now;</string>
	<string name="comments">Comments</string>
	<string name="checkPrice">Check Price</string>
	<string name="useFilters">Use Filters</string>
	<string name="noDocumentsFound">No documents found</string>
	<string name="gsisError">There was an error trying to reach https://www1.gsis.gr/wsgsis/RgWsBasStoixN/RgWsBasStoixNSoapHttpPort</string>
	<string name="updateConfirmation">Update now ?</string>
	<string name="customerTab">Customer Tab</string>
	<string name="DateFinalization">Finalizated date</string><string name="maxOrderQtyExceeded">Max Order Quantity Exceeded. Max: var1</string>
	<string name="userHasNoStores">User has no stores</string>
	<string name="from">From</string>
	<string name="youCannotUpdatewhileYouHaveOrders">You cannot update while you have unsent orders</string>
</resources>