<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp" >

<ScrollView
    android:id="@+id/dummyID3425656535454"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp" >

 	<LinearLayout
        android:id="@+id/dummyID342234234234"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
    
	    <TextView
	        android:id="@+id/lblCustDlgTaxCode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/taxCode"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="@dimen/text_tiny" />
	
	    <EditText
	        android:id="@+id/txtCustDlgTaxCode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:ems="10"
	        android:inputType="numberDecimal" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/lblCustDlgCode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/code"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="@dimen/text_tiny" />
	
	    <EditText
	        android:id="@+id/txtCustDlgCode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:ems="10"
	        android:inputType="textPostalAddress" />
	
	    <TextView
	        android:id="@+id/lblMainText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtPriceCatalog"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="@dimen/text_tiny" />
	
	    <Spinner
	        android:id="@+id/cmbDialogPriceCatalog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/lblMinorText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/store"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="@dimen/text_tiny" />
	
	    <Spinner
	        android:id="@+id/cmbDialogStore"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <LinearLayout
	        android:id="@+id/Dummy24685782456"
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal" >
	
	        <Button
	            android:id="@+id/btnCustDlgOk"
	            android:layout_width="100dp"
	            android:layout_height="match_parent"
	            android:layout_marginRight="20dp"
	            android:text="@string/ok"
	            android:textSize="@dimen/text_tiny" />
	
	        <Button
	            android:id="@+id/btnCustDlgCancel"
	            android:layout_width="150dp"
	            android:layout_height="match_parent"
	            android:text="@string/cancel"
	            android:textSize="@dimen/text_tiny"
	            android:width="295dp" />
	    </LinearLayout>
	</LinearLayout>
	</ScrollView>
</FrameLayout>

