<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_offer_header"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lblOfferHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:text="@string/offers"
        android:textColor="@android:color/holo_blue_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblOfferHeaderFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FromFilter"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/lblOfferHeaderTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ToFilter"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

</LinearLayout>
