<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_offer_header"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lblOfferHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:text="@string/offers"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblOfferHeaderFrom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/FromFilter"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/text_tiny" />

        <TextView
            android:id="@+id/lblOfferHeaderTo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:text="@string/ToFilter"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/text_tiny" />

    </LinearLayout>

</LinearLayout>
